# wk

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  wk  wk.ron
examples/: wk.ron
scripts/: install.sh  uninstall.sh  wk
src/: configuration.rs  main.rs  workspace.rs
