[package]
name = "wk"
description = "WK is a CLI tool to create aliases for directory ( workspace )."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ron = "0.7.0"
serde = "1.0.137"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

