[package]
name = "wk"
description = "WK is a CLI tool to create, manager and access workspaces"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
ron = "0.7.0"
serde = "1.0.137"
clap = { version = "3.1.18", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

