[package]
name = "wk"
description = "WK is a CLI tool to create, manager and access workspaces"
keywords = ["workspace", "cli"]
categories = ["command-line-utilities"]
version = "0.4.0"
authors = ["Henry Barreto <me@henrybarreto.dev>"]
repository = "https://github.com/henrybarreto/wk"
license = "MIT"
edition = "2021"

[dependencies]
ron = "0.7.0"
serde = "1.0.137"
clap = { version = "3.1.18", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

